# ikigai-web-demo

./: .gitignore  Cargo.toml  DEMO.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
src/: lib.rs
