[package]
name = "ikigai-web-demo"
version = "0.0.0"
edition = "2021"
publish = false
description = "Bootstrap: the ikigai kernel running in the browser via WebAssembly."

[lib]
crate-type = ["cdylib", "rlib"]

# The WebTransport server (native only). The wasm build uses `cargo build --lib`,
# so this bin is never compiled for wasm; its deps live in the target section below.
[[bin]]
name = "ikigai-net-server"
path = "src/bin/server.rs"

[dependencies]
# Published crates from crates.io (graduated off the sibling path deps once
# ikigai-core/ikigai-vocab were published at 0.1.0). This demo is a standalone
# proof, intentionally not part of either repo's CI.
ikigai-core = "0.1.10"  # golden thread + the urn:kernel:* namespace (cut/threads/cache)
# The reusable function library, linked in as a published module crate.
# Compiled to wasm32 alongside this lib — the in-browser proof of module linkage.
ikigai-fn = "0.1.0"
# The capability-gated file module, here on its wasm32 localStorage backend — the
# browser proof that the same module serves files natively and in the page.
ikigai-fs = "0.1.2"  # cacheable file Source (FileEndpoint::cacheable) for the golden thread
ikigai-vocab = "0.1"
# The CLI's renderer-agnostic Engine — drives the in-page terminal — and its Resolver
# seam. 0.1.4 is the async API (eval_async / issue_as_async) that lets the in-page
# terminal drive the kernel on the JS event loop (M2).
ikigai-engine = "0.1.4"
ikigai-resolve = "0.1.4"
# The on-wire Call/Reply protocol — the WASM codec (network demo) speaks it in the
# browser, and the server speaks it on the other end. Same bytes as ikigai-ipc/quic.
ikigai-wire = "0.1"
# Outbound HTTP-client module (urn:httpGet…). Already async + executor-agnostic
# (HttpTransport seam), so the browser supplies a `fetch`-backed transport — same
# module the native CLI drives with ureq. Unchanged for M2, so straight from crates.io.
ikigai-http = "0.1.1"
# Interactive runbook module (urn:runbook:*) — same module the CLI links; local path
# during dev, publish/git when stable (like engine/resolve).
ikigai-runbook = { git = "https://github.com/ikigai-rs/ikigai-runbook" }
# oneshot channel: the browser fetch transport confines the !Send `fetch` to a
# spawn_local task and bridges the (Send) result back, so `HttpTransport::send` stays
# Send as the trait requires.
futures = "0.3"
serde_json = "1"  # encode the eval result ({kind, text, cache}) for JS
async-trait = "0.1"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"  # js_sys::Promise return type for evalLineAsync
console_error_panic_hook = "0.1"

# Native-only: the WebTransport server stack. Excluded from the wasm dependency
# graph by the cfg, so the wasm build stays lean.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
wtransport = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }

# wasm-only: the cross-tab `storage` event, used to cut golden threads when another
# tab (or page JS) changes a workspace file — the browser's filesystem watcher.
[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "EventTarget", "StorageEvent",
    "Request", "RequestInit", "Response", "Headers",
] }

[profile.release]
opt-level = "z"
lto = true
