[package]
name = "ikigai-web-demo"
version = "0.0.0"
edition = "2021"
publish = false
description = "Bootstrap: the ikigai kernel running in the browser via WebAssembly."

[lib]
crate-type = ["cdylib", "rlib"]

# The WebTransport server (native only). The wasm build uses `cargo build --lib`,
# so this bin is never compiled for wasm; its deps live in the target section below.
[[bin]]
name = "ikigai-net-server"
path = "src/bin/server.rs"

[dependencies]
# Published crates from crates.io (graduated off the sibling path deps once
# ikigai-core/ikigai-vocab were published at 0.1.0). This demo is a standalone
# proof, intentionally not part of either repo's CI.
ikigai-core = "0.1.31"  # urn:kernel:actions self-describes (Selection demo routes types=)
# The reusable function library, linked in as a published module crate.
# Compiled to wasm32 alongside this lib — the in-browser proof of module linkage.
ikigai-fn = "0.1.0"
# The capability-gated file module, here on its wasm32 localStorage backend — the
# browser proof that the same module serves files natively and in the page.
ikigai-fs = "0.1.2"  # cacheable file Source (FileEndpoint::cacheable) for the golden thread
ikigai-vocab = "0.1"
# The CLI's renderer-agnostic Engine — drives the in-page terminal — and its Resolver
# seam. 0.1.4 is the async API (eval_async / issue_as_async) that lets the in-page
# terminal drive the kernel on the JS event loop (M2).
ikigai-engine = "0.1.7"  # pipe fills the sole required input (JSON-LD demo's content+base pipes)
ikigai-resolve = "0.1.6"  # is_cached carries &Capability
# The on-wire Call/Reply protocol — the WASM codec (network demo) speaks it in the
# browser, and the server speaks it on the other end. Same bytes as ikigai-ipc/quic.
# Also reused for the module-session codec (encode/decode of ModuleCall/ModuleReply).
ikigai-wire = "0.1"
# The dynamically-loadable module format. The host mounts the lazy XSLT module as a generic
# WasmModuleSpace and services its HostCalls with serve_host_call; the session protocol + the
# provenance sink live in the crate (the module runs run_session in its own wasm).
ikigai-module = "0.1.7"  # with_endpoint(): lazy modules enumerate into the catalog
# Outbound HTTP-client module (urn:httpGet…). Already async + executor-agnostic
# (HttpTransport seam), so the browser supplies a `fetch`-backed transport — same
# module the native CLI drives with ureq. Unchanged for M2, so straight from crates.io.
ikigai-http = "0.1.1"
# Interactive runbook module (urn:runbook:*) — same module the CLI links; local path
# during dev, publish/git when stable (like engine/resolve).
ikigai-runbook = "0.1.8"  # Selection demo tab (typed urn:action:* + urn:kernel:actions)
# RDF transreption module (urn:rdf:transrept) from the ikigai-linkeddata workspace —
# parses an RDF syntax and re-serializes to another (or to an HTML table), client-side
# in wasm. The catalog + FOAF render to HTML through this. (SPARQL deferred to a later
# slice.) Unpublished during dev — supplied by the [patch.crates-io] below.
ikigai-rdf = "0.1.2"
# Content sniffing + sniff-and-dispatch (urn:sniff, urn:transrept:auto) — classify
# opaque bytes and route them to the right transreptor, client-side.
ikigai-sniff = "0.1.1"
# oneshot channel: the browser fetch transport confines the !Send `fetch` to a
# spawn_local task and bridges the (Send) result back, so `HttpTransport::send` stays
# Send as the trait requires.
futures = "0.3"
serde_json = "1"  # encode the eval result ({kind, text, cache}) for JS
async-trait = "0.1"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"  # js_sys::Promise return type for evalLineAsync
console_error_panic_hook = "0.1"

# Native-only: the WebTransport server stack. Excluded from the wasm dependency
# graph by the cfg, so the wasm build stays lean.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
wtransport = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
# XSLT linked natively (the server can't lazy-load a wasm module). On wasm the host
# instead lazy-loads `ikigai-xslt-module` (xrust kept OUT of the host wasm) — Phase 2.
ikigai-xslt = "0.1.0"
# JSON-LD operators linked natively (same reason as XSLT — no wasm lazy-load on the
# server). On wasm the host lazy-loads the module instead (json-ld kept out of the host).
ikigai-jsonld = "0.1.1"  # compact sources a context-by-reference
# SHACL validation linked natively (rudof; native-only). On wasm the browser serves
# urn:shacl:validate via the JS shacl-engine (dist/shacl-loader.js) instead.
ikigai-shacl = "0.1.0"

# wasm-only: the cross-tab `storage` event, used to cut golden threads when another
# tab (or page JS) changes a workspace file — the browser's filesystem watcher.
[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "EventTarget", "StorageEvent",
    "Request", "RequestInit", "Response", "Headers",
] }

[profile.release]
opt-level = "z"
lto = true
